--- a/src/views/html/assets/scss/common/_reset.scss
+++ b/src/views/html/assets/scss/common/_reset.scss
@@ -139,6 +139,7 @@ html,
 textarea,
 input {
 	font-size: 14px;
+	color:#fff;
 	font-weight: normal;
 	letter-spacing: -0.35px;
 	line-height: 1.14;
