--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -2,10 +2,8 @@
 body {
 	background-color: $bg-dark;
 	color: #fff;
-	background-image: url(../../img/star-bg-2.svg);
 }
 main {
-	min-height: 70vh;
 	padding-bottom: 100px;
 	@include media-max($l) {
 		margin-top: $head-h-m;
@@ -22,6 +20,10 @@ main {
 }
 
 .main_container {
+	background-color: $bg-dark;
+
+	min-height: 100vh;
+	background-image: url(../../img/star-bg-2.svg);
 	@include media-min($l) {
 		@include flex(s);
 		padding-top: 60px;
@@ -66,13 +68,24 @@ main {
 	@include flex(column);
 	gap: 30px;
 	margin-top: 40px;
+	&__bg{
+    position: fixed;
+    bottom: 10%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    transform: translate(-50%, 0);
+    border-radius: 50%;
+    background-color: #161f32;
+    scale: 0;
+    display: none;
+	}
 	.item {
 		color: #fff;
 		font-size: 18px;
 		letter-spacing: 1px;
 	}
 	@include media-max($l) {
-		background-color: #0d121b;
 		margin-top: 0;
 		position: fixed;
 		top: 0;
@@ -82,17 +95,12 @@ main {
 		@include flex(all);
 		overflow: auto;
     overscroll-behavior: contain;
-    transition: opacity .5s,transform .25s ease;
     opacity: 0;
 		pointer-events: none;
-    transform: translateY(100%);
 
 		&.active{
-			display: flex;
-			opacity: 1;
-			pointer-events: auto;
-			transform: translateY(0);
-			transition: opacity .25s,transform .5s cubic-bezier(.19,1,.22,1);
+			//opacity: 1;
+			//pointer-events: auto;
 			
 		}
 		.item {
@@ -144,4 +152,14 @@ main {
 			}
 		}
 	}
+}
+.start_bg {
+	position: fixed;
+	background-color: #060910;
+	left: 0;
+	top: 0;
+	right: 0;
+	height: 100vh;
+	width: 100%;
+	z-index: 100;
 }
