--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -123,7 +123,29 @@ main {
 			min-width: 100%;
 		}
 		@include media-max($xl) {
-			display: none;
+			position: relative;
+			.head__about-txt{
+				font-size: 16px;
+				text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+				&::before{
+					display: none;
+				}
+				.name{
+					font-size: 16px;
+					margin-top:2px;
+				}
+			}
+			.head__about-desc{
+				display: none;
+			}
+			.head__about-links{
+				margin-top: 0;
+				a{
+					
+				text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+				}
+			}
+
 		}
 	}
 }
@@ -163,10 +185,10 @@ main {
 		opacity: 0;
 		pointer-events: none;
 
-		&.active {
-			//opacity: 1;
-			//pointer-events: auto;
-		}
+		//&.active {
+		//	//opacity: 1;
+		//	//pointer-events: auto;
+		//}
 		.item {
 			text-align: center;
 		}
