--- a/src/views/html/assets/scss/page/main.scss
+++ b/src/views/html/assets/scss/page/main.scss
@@ -4,12 +4,12 @@
 	padding-bottom: 0;
 	@include media-max($l) {
 			
-	margin-top:50px
+	margin-top:20px
 	}
 	.pf_tab__wrap{
 		margin-bottom: 40px;
 		@include media-max($l) {
-				margin-top: 90px;
+				margin-top: 0;
 				margin-bottom: 20px;
 		}
 	}
