--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -2,11 +2,8 @@
 body {
 	background-color: $bg-dark;
 	color: #fff;
-	background-image: url(../../img/star-bg.svg);
-	background-repeat: repeat;
-	background-position: 0 0;
-	background-attachment: fixed;
 }
+
 main {
 	padding-bottom: 100px;
 	@include media-max($l) {
@@ -17,6 +14,10 @@ main {
 .pf_center_wrap {
 	max-width: 1920px;
 	margin-inline: $pd-inline;
+	background-image: url(../../img/star-bg.svg);
+	background-repeat: repeat;
+	background-position: 0 0;
+	background-attachment: fixed;
 	@include media-max($xxl) {
 		width: auto;
 		margin-inline: $pd-inline-m;
@@ -39,7 +40,7 @@ main {
 		gap: 40px;
 	}
 	@include media-max($xxl) {
-		gap: 20px;
+		gap: 10px;
 	}
 	main {
 		flex: 1;
@@ -48,8 +49,9 @@ main {
 .head {
 	width: $lnb-w;
 	flex: 0 0 auto;
+	transition: 0.2s;
 	@include media-max($xxl) {
-		width: 280px;
+		width: 250px;
 	}
 	@include media-max($xl) {
 		//position: fixed;
@@ -86,6 +88,11 @@ main {
 			background-clip: text;
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
+			transition: 0.2s;
+			
+	@include media-max($xxl) {
+		font-size: 30px;
+	}
 			.name {
 				background-image: linear-gradient(90deg,  #00d36a, #00c1ff);
 				background-size: 150% 150%;
@@ -193,7 +200,6 @@ main {
 		color: #fff;
 		font-size: 20px;
 		letter-spacing: 1px;
-		transition: 0.2s ease-out;
 	}
 	@include media-max($xl) {
 		margin-top: 0;
@@ -275,6 +281,7 @@ main {
 	height: 100vh;
 	width: 100%;
 	z-index: 100;
+	//display: none;
 }
 
 .cusor_bg {
