--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -1,6 +1,6 @@
 //layout
 body {
-	background-color: $bg-dark;
+	background-color: $bg;
 	color: #fff;
 }
 
@@ -12,15 +12,18 @@ main {
 	}
 }
 .pf_center_wrap {
-	max-width: 1920px;
-	margin-inline: $pd-inline;
-	background-image: url(../../img/star-bg.svg);
-	background-repeat: repeat;
-	background-position: 0 0;
-	background-attachment: fixed;
+	max-width: 1500px;
+	width: 100%;
+	margin-inline: auto;
+	//background-image: url(../../img/star-bg.svg);
+	//background-repeat: repeat;
+	//background-position: 0 0;
+	//background-attachment: fixed;
 	@include media-max($xxl) {
-		width: auto;
-		margin-inline: $pd-inline-m;
+		padding-inline:  $pd-inline;
+	}
+	@include media-max($l) {
+		padding-inline:  $pd-inline-m;
 	}
 }
 @keyframes rotateBg {
@@ -34,6 +37,7 @@ main {
 
 .main_container {
 	min-height: 100vh;
+	margin-inline: auto;
 	@include media-min($xl) {
 		@include flex(s);
 		padding-top: 60px;
@@ -47,23 +51,31 @@ main {
 	}
 }
 .head {
-	width: $lnb-w;
-	flex: 0 0 auto;
+	position: relative;
 	transition: 0.2s;
-	@include media-max($xxl) {
-		width: 250px;
+	z-index: 10;
+	height: $head-h;
+	.pf_center_wrap{
+		height: 100%;
+		@include flex(between);
 	}
 	@include media-max($xl) {
-		//position: fixed;
-		//top: 0;
-		//left: 0;
 		position: relative;
 		height: $head-h-m;
 		width: 100%;
 		padding: 15px 0;
 		@include flex(s);
-		z-index: 10;
 		background: none;
+	}
+	@include media-max($l) {
+			
+	height: $head-h-m;
+	}
+	.logo{
+		@include inflex(all);
+		@include media-max($l) {
+				width: 130px;
+		}
 	}
 	&__about {
 		position: relative;
@@ -72,29 +84,36 @@ main {
 		gap: 10px;
 		padding-bottom: 20px;
 		@include media-max($m) {
-				gap:15px;
+			gap: 15px;
 		}
 		&-txt {
-			font-size: 20px;
-			font-weight: 300;
 			//@include flex(s);
 			//gap: 5px;
 			//white-space: nowrap;
 			line-height: 1.3;
-			background-image: linear-gradient(180deg,  #95FF2B, #fff);
-			font-weight: 700;
+			background-image: linear-gradient(180deg, #95ff2b, #00c1ff);
+			font-weight: 600;
 			font-size: 40px;
 			background-size: 150% 150%;
 			background-clip: text;
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			transition: 0.2s;
-			
-	@include media-max($xxl) {
-		font-size: 30px;
-	}
+
+			.st {
+				font-size: 28px;
+				background-image: linear-gradient(180deg, #00d36a, #00c1ff);
+				background-clip: text;
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
+				font-weight: 500;
+			}
+
+			@include media-max($xxl) {
+				font-size: 30px;
+			}
 			.name {
-				background-image: linear-gradient(90deg,  #00d36a, #00c1ff);
+				background-image: linear-gradient(90deg, #00d36a, #00c1ff);
 				background-size: 150% 150%;
 				background-clip: text;
 				-webkit-background-clip: text;
@@ -121,33 +140,10 @@ main {
 			}
 		}
 		&-desc {
-			font-size: 16px;
-			color: #94a3b8;
+			color: #a1a1aa;
 			//padding-left: 35px;
 			margin-top: 10px;
-		}
-		&-links {
-			margin-top: 20px;
-			@include flex(y);
-			flex-wrap: wrap;
-			gap: 15px;
-			@include media-min($l) {
-				margin-left: auto;
-				gap: 20px;
-			}
-			a {
-				color: #fff;
-				@include flex(y);
-			}
-			.icon_gmail {
-				@include addImgSvg(icon_gmail, 20, 20);
-			}
-			.icon_github {
-				@include addImgSvg(icon_github, 20, 20);
-			}
-			.icon_notion {
-				@include addImgSvg(icon_notion, 20, 20);
-			}
+			font-size: 17px;
 		}
 		&-tel {
 			color: #fff;
@@ -181,8 +177,6 @@ main {
 }
 
 .nav {
-	@include flex(column);
-	gap: 30px;
 	margin-top: 40px;
 	&__bg {
 		position: fixed;
@@ -194,49 +188,67 @@ main {
 		border-radius: 50%;
 		background-color: #050b18;
 		scale: 1;
-		display: none;
+		//display: none;
 	}
-	.item {
+	.nav_item {
 		color: #fff;
-		font-size: 20px;
-		letter-spacing: 1px;
-	}
-	@include media-max($xl) {
-		margin-top: 0;
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		@include flex(all);
-		overflow: auto;
-		overscroll-behavior: contain;
-		opacity: 0;
-		pointer-events: none;
+		font-size: 80px;
+		font-family: Poppins;
+		font-weight: 100;
+     letter-spacing: 1px;
+		 @include media-max($l) {
+				 font-size: 40px;
+		 }
 
-		//&.active {
-		//	//opacity: 1;
-		//	//pointer-events: auto;
-		//}
-		.item {
-			text-align: center;
-		}
+		 &__wrap{
+			@include flex(column);
+			gap:50px;
+			align-items: center;
+			@include media-max($l) {
+					gap:30px;
+			}
+		 }
+		
 	}
+	//@include media-max($xl) {
+	margin-top: 0;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	@include flex(all);
+	overflow: auto;
+	overscroll-behavior: contain;
+	opacity: 0;
+	pointer-events: none;
+
+	//&.active {
+	//	//opacity: 1;
+	//	//pointer-events: auto;
+	//}
+	.item {
+		text-align: center;
+	}
+	//}
 	&__open {
-		position: relative;
-		width: 22px;
-		height: 20px;
+		//position: fixed;
+		//right: 30px;
+		//top: 30px;
+		//z-index: 1000;
+		@include inflex(all);
+		width: 44px;
+		height: 40px;
 		margin-left: auto;
 		overflow: hidden;
-		@include media-min($xl) {
-			display: none;
-		}
 		@include media-max($l) {
-			position: fixed;
-			right: 20px;
-			top: 20px;
-			z-index: 1000;
+		right: 20px;
+		top: 20px;
+			width: 22px;
+			height: 20px;
 		}
+		//@include media-max($l) {
+		//}
 		.item {
 			position: absolute;
 			top: 0;
@@ -245,28 +257,49 @@ main {
 			height: 2px;
 			background: #fff;
 			display: block;
-			transition: 0.2s;
+			transition: 0.3s ease-in;
 			&:nth-of-type(2) {
-				top: 9px;
+				top: 14px;
 				transform: translate(8px);
 			}
 			&:nth-of-type(3) {
-				top: 18px;
+				top: 28px;
+			}
+			@include media-max($l) {
+				&:nth-of-type(2) {
+					top: 9px;
+					transform: translate(8px);
+				}
+				&:nth-of-type(3) {
+					top: 18px;
+				}
 			}
 		}
 		&.active {
 			justify-content: center;
 			.item {
 				&:nth-of-type(1) {
-					top: 9px;
+					top: 18px;
 					transform: translate(0) rotate(225deg);
+					@include media-max($l) {
+					top: 9px;
+							
+					}
 				}
 				&:nth-of-type(2) {
+					transform: translate(44px);
+				  @include media-max($l) {
 					transform: translate(22px);
+							
+					}
 				}
 				&:nth-of-type(3) {
-					top: 9px;
+					top: 18px;
 					transform: translate(0) rotate(135deg);
+					@include media-max($l) {
+					top: 9px;
+							
+					}
 				}
 			}
 		}
@@ -385,4 +418,81 @@ main {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+
+//content_links
+.content_links{
+			margin-top: 20px;
+			@include flex(y);
+			flex-wrap: wrap;
+			gap: 30px;
+			a {
+				color: #fff;
+				@include flex(y);
+			}
+			.icon_gmail {
+				@include addImgSvg(icon_gmail, 20, 20);
+			}
+			.icon_github {
+				@include addImgSvg(icon_github, 20, 20);
+			}
+			.icon_notion {
+				@include addImgSvg(icon_notion, 20, 20);
+			}
+}
+
+
+//top_section
+.top_section{
+	.about_row{
+		@include flex(between);
+		padding-block: 30px 60px;
+		color:#fff;
+		gap:20px;
+		@include media-max($m) {
+				flex-direction: column;
+				padding-block: 20px 30px;
+				gap:20px;
+
+		}
+		.line{
+			border-bottom: 1px solid #fff;
+		}
+		.box_l{
+			line-height: 1.6;
+			font-size: 24px;
+			font-weight: 600;
+			flex:1;
+			width: 100%;
+			@include media-max($l) {
+					font-size: 18px;
+			}
+		}
+		.list{
+			font-size: 18px;
+			gap:10px;
+			color:$text-2;
+			flex:0 0 auto;
+		
+			@include list(20px, 20px, 2);
+			width: auto;
+			max-width: 560px;
+			@include media-max($l) {
+					font-size: 14px;
+			  max-width: 430px;
+			}
+			@include media-max($m) {
+					
+					width: 100%;
+		     @include list(5px, 10px, 2);
+			}
+			li{
+				@include flex(s);
+				gap:5px;
+			}
+
+		}
+	}
+
 }
