--- a/src/views/html/assets/scss/common/_button.scss
+++ b/src/views/html/assets/scss/common/_button.scss
@@ -1,14 +1,14 @@
 // button
 .pf_btn {
 	position: relative;
-	padding: 0 20px;
+	padding: 0 30px;
 	border-radius: 6px;
 	min-width: 85px;
 	@include inflex(all);
 	letter-spacing: normal;
 	box-sizing: border-box;
 	letter-spacing: -0.025em;
-	color: #fff;
+	color: $text;
 	gap: 8px;
 	&:visited,
 	&:link,
@@ -102,8 +102,9 @@
 	}
 	//&컬러 color
 	&.point {  
-		  background-image: linear-gradient(90deg, #00d36a, #00c1ff);
-		color:#fff !important;
+		  background-image: linear-gradient(122deg, $point, #01b0f5);
+    box-shadow: 5px 5px 15px 0px rgba(108, 52, 249, 0.3);
+		color:$text !important;
 	}
 	&.black {
 		background-color: #000;
@@ -205,8 +206,11 @@
 	//&사이즈 size
 	&.l {
 		height: 60px;
-		font-weight: 700;
-		font-size: 16px;
+		font-weight: 600;
+		font-size: 18px;
+		@include media-max($m) {
+				font-size: 16px;
+		}
 		&.oval {
 			border-radius: 60px;
 		}
