--- a/src/views/html/assets/scss/common/_reset.scss
+++ b/src/views/html/assets/scss/common/_reset.scss
@@ -83,87 +83,9 @@
 	font-display: swap;
 }
 
-/* devanagari */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLDz8Z11lFc-K.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLDz8Z1xlFQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* devanagari */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* devanagari */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLGT9Z11lFc-K.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLGT9Z1JlFc-K.woff2) format('woff2');
-  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v23/pxiByp8kv8JHgFVrLGT9Z1xlFQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+/* import font */
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&display=swap");
 
 html {
 	/* Prevent font scaling in landscape */
@@ -171,14 +93,20 @@ html {
 	-moz-text-size-adjust: none; /*Firefox*/
 	-ms-text-size-adjust: none; /*Ie*/
 	-o-text-size-adjust: none; /*old versions of Opera*/
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 html,
 a,
 button,
 input,
 textarea {
-	font-family: $font_default, "Malgun Gothic", "맑은 고딕", Roboto, Arial;
+	font-family: "Pretendard", sans-serif;
+}
+.en {
+	font-family: Poppins, "Pretendard", sans-serif;
+}
+.en2 {
+	font-family: "Cormorant Infant", serif;
 }
 *,
 *::before,
@@ -212,7 +140,7 @@ html,
 textarea,
 input {
 	font-size: 14px;
-	color:#fff;
+	color: #fff;
 	font-weight: normal;
 	letter-spacing: -0.35px;
 	line-height: 1.14;
@@ -280,14 +208,14 @@ button
 // a:visited,
 // a:link
 {
-  color:$fc-default;
+	color: $fc-default;
 }
 input[type="number"],
 input[type="password"],
 input[type="tel"],
 input[type="text"],
 input[type="date"],
-input[type=search],
+input[type="search"],
 select,
 textarea {
 	padding: 0 8px;
@@ -350,15 +278,15 @@ input[type="search"] {
 	border: 1px solid $c-border;
 	height: 50px;
 	border-radius: 5px;
-  -webkit-appearance: textfield;
+	-webkit-appearance: textfield;
 	.dark & {
 		background-color: $inner-dark;
 		border-color: $c-border-dark-light;
 		color: #fff;
 	}
-  &::-webkit-search-decoration {
-    -webkit-appearance: none;
-  }
+	&::-webkit-search-decoration {
+		-webkit-appearance: none;
+	}
 }
 
 input::-webkit-search-decoration,
@@ -373,26 +301,25 @@ input[type="search"]::-webkit-search-cancel-button {
 	cursor: pointer;
 }
 
-
 input[type="date"]::-webkit-clear-button,
-input[type="date"]::-webkit-inner-spin-button { 
-    display: none;
-} 
-input[type="date"]::-webkit-calendar-picker-indicator { 
-    background: transparent;
-    z-index: 1;
-} 
+input[type="date"]::-webkit-inner-spin-button {
+	display: none;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+	background: transparent;
+	z-index: 1;
+}
 
-input[type='date']::-webkit-calendar-picker-indicator {
-  position:absolute;
-  //왼쪽위에 위치시키고 클릭 영역을 부모(input)의 크기만큼 가짐
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  // 배경과 글자를 투명하게 하여 기존의 아이콘이 없는 것처럼 보여줌
-  background: transparent;
-  color: transparent;
+input[type="date"]::-webkit-calendar-picker-indicator {
+	position: absolute;
+	//왼쪽위에 위치시키고 클릭 영역을 부모(input)의 크기만큼 가짐
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	// 배경과 글자를 투명하게 하여 기존의 아이콘이 없는 것처럼 보여줌
+	background: transparent;
+	color: transparent;
 }
 
 h1,
@@ -516,7 +443,7 @@ input:disabled {
 	cursor: not-allowed;
 	color: #adadad;
 	.dark & {
-		color: #5b637a; 
+		color: #5b637a;
 	}
 }
 
