--- a/src/views/html/assets/scss/page/main.scss
+++ b/src/views/html/assets/scss/page/main.scss
@@ -48,7 +48,7 @@
 		path {
 			opacity: 0.8;
 			stroke-width: 3px;
-			stroke: $point;
+			stroke: $text-2;
 			//stroke-dasharray: 4313;
 			//stroke-dashoffset: -4313;
 			//animation: ani1 2s linear 1s forwards;
