--- a/src/views/html/assets/scss/common/_text.scss
+++ b/src/views/html/assets/scss/common/_text.scss
@@ -1,10 +1,10 @@
 //!^text style
 
-.point {
-	color: $point !important;
-}
+//.point:not(.pf_btn) {
+//	color: $point !important;
+//}
 
-.point2 {
+.point2:not(.pf_btn) {
 	color: $point2 !important;
 }
 
@@ -321,3 +321,5 @@
 		}
 	}
 }
+
+
