--- a/src/views/html/assets/scss/page/about.scss
+++ b/src/views/html/assets/scss/page/about.scss
@@ -17,13 +17,13 @@
 
 	.pf_center_wrap{
 		
-	  gap:120px;
+	  gap:160px;
 	  @include flex(column);
 		@include media-max($l) {
-				gap:80px;
+				gap:120px;
 		}
 		@include media-max($m) {
-				gap:40px;
+				gap:80px;
 		}
 	}
 	&__txt{
@@ -31,7 +31,7 @@
 		@include flex(column);
 		align-items: center;
 		.h{
-			margin-bottom: 4%;
+			margin-bottom: 5%;
 			
 			@include font-size(40px, 80px);
 			@include media-max($l) {
@@ -39,11 +39,14 @@
 			}
 		}
 		.h_st{
-			@include flex(s);
+			@include flex(y);
 			gap:6px;
 			@include font-size(20px, 34px);
 			font-weight: 500;
 			color:$text-3;
+			@include media-max($m) {
+					align-items: flex-start;
+			}
 		}
 		.desc{
 			line-height: 1.8;
@@ -55,6 +58,9 @@
 			@include flex(column);
 			gap:20px;
 			line-height: 1.5;
+			&.center{
+				align-items: center;
+			}
 			@include media-min($l) {
 					font-size: 16px;
 			}
@@ -66,19 +72,53 @@
 				border-bottom: 1px solid #fff;
 			}
 			li{
-				@include flex(s);
+				@include flex(y);
 				gap:10px;
 			@include font-size(20px, 30px);
 			color:$text-3;
+
+			@include media-max($m) {
+				align-items: flex-start;
+		}
 			}
 		}
 		.pf_btn{
 			width: fit-content;
-			margin-top: 3%;
+			margin-top: 6%;
 		}
 	}
 }
 
 .content_links{
 	justify-content: center;
+}
+
+.icon_check{
+	position: relative;
+	background-color: #47cf73;
+	background-image: linear-gradient(135deg, #00d36a, #00c1ff);
+	    background-image: linear-gradient(to bottom, #a98fff, #8470ff, #5146fc), linear-gradient(to top, #fff, #fff);
+
+			//background-image: linear-gradient(301deg, #0088FF -118.6%, #7900C9 58.3%);
+	border-radius: 100%;
+	flex:0 0 auto;
+	height: 30px;
+	width: 30px;
+	@include media-max($m) {
+			width: 24px;
+			height: 24px;
+	}
+	@include inflex(all);
+	&::after{
+		content: "";
+				position: absolute;
+				top: 50%;
+				left:50%;
+				 transform: translate(-50%,-50%) rotate(45deg);
+    display: block;
+    width: 10px;
+    height: 18px;
+    border: solid $bg;
+    border-width: 0 4px 4px 0;
+	}
 }
